Fix overlay % form z-indexing to prevent sidebar toggle in compact-view

--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -5,16 +5,17 @@
 }
 
 body {
-    background-color: var(--light-3);
+    background-color: var(--background);
     color: var(--dark);
 }
 
 #title,
 #sidebar,
 .card.project,
+.card.preference-header,
 .card.singleton,
 .card.checklist {
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 12px 1px;
 }
 
 #title {
@@ -25,15 +26,12 @@ body {
     background-color: var(--ui);
 }
 
-    .view-prefs ul li {
-        border-radius: 0.5em;
-    }
-
 #display {
     background: var(--background);
 }
 
     .card.project,
+    .card.preference-header,
     .card.singleton,
     .card.checklist {
         background-color: var(--ui);
@@ -51,7 +49,7 @@ body {
         border: none;
     }
 
-        .pronject-icons-container {
+        .project-icons-container {
             border-radius: 0.5em;
         }
 
